[FEAT]: Set up Express.js, Prisma, Gmail SMTP, Google OAuth, and Redis Cloud

--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   },
   "homepage": "https://github.com/Yash-Varmora/SocioFeed-Backend#readme",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "google-auth-library": "^9.15.1",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
+    "prisma": "^6.8.2",
+    "redis": "^5.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.1",
