--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
-PORT=
+PORT =
 
 RATE_LIMIT_TIME =  // IN MINUTES
 RATE_LIMIT_REQUEST = 
 
 FRONTEND_URL = 
 
+DATABASE_URL =
+
+EMAIL_USER =
+EMAIL_PASS =
+
+GOOGLE_CLIENT_ID = 
+
+REDIS_URL =  
