--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
   "homepage": "https://github.com/Yash-Varmora/SocioFeed-Backend#readme",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
     "google-auth-library": "^9.15.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "prisma": "^6.8.2",
