--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "prisma": "^6.8.2",
-    "redis": "^5.1.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.1",
